@@ -16,6 +16,7 @@ Depends: zentyal-core (>= 4.1), zentyal-core (<< 4.2),
          openchange-ocsmanager (>> 3:2.3-zentyal1),
          apache2, zip, sogo-openchange (>= 2.2.5-zentyal1~20140618-1~108),
          ${misc:Depends}
+Breaks: dovecot-openchange-plugin (= 0.1)
 Description: Zentyal - OpenChange Server
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
