@@ -1,3 +1,5 @@
+HEAD
+	+ Configuration for openchange notifications with dovecot plugin
 4.1.1
 	+ Fix wrong call to etherIface after PPPoE removal
 4.1
