@@ -1,3 +1,5 @@
+HEAD
+	+ Configuration for openchange notifications with dovecot plugin
 4.1.2
 	+ Add integration with zentyal-antivirus
 4.1.1
