@@ -1,3 +1,5 @@
+HEAD
+	+ Configuration for openchange notifications with dovecot plugin
 4.1.1
 	+ Restore integration with zentyal-mailfilter
 4.1
